Bug 563182 - [15] Records - Safevarargs
Change-Id: I445d50d7ea3c98080c5dc065136e57210d42cd94
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>